--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/jquery.js"></script>
-    <script src="js/wow.js"></script>
-    <script src="js/index.js"></script>
+    <!-- <script src="js/wow.js"></script> -->
+    <!-- <script src="js/index.js"></script> -->
 
     <title>Document</title>
 
@@ -45,8 +44,8 @@
             <div class="con1">
                 <div class="title"><img src="images/t1.jpg" alt=""></div>
                 <div class="content clearfix">
-                    <div class="fl bounceInLeft animated wow"><img src="images/sj.png" class="sj" alt=""></div>
-                    <div class="fr textConBox wow  bounceInRight animated">
+                    <div class="fl bounceInLeft  wow"><img src="images/sj.png" class="sj" alt=""></div>
+                    <div class="fr textConBox wow  bounceInRight ">
                         <div class="text">易贝乐自主学习3L系统</div>
                         <div class="textCon">
                             <p>彻底解决困扰中国儿童学好英语的几大难题，无需家长辅导、操心，孩子自己学好英语</p>
@@ -57,8 +56,8 @@
             </div>
             <div class="con2">
                 <div class="content clearfix">
-                    <div class="fl bounceInLeft animated wow"><img src="images/xian.jpg" alt="" class="xian"></div>
-                    <div class="fr textConBox bounceInRight  wow animated">
+                    <div class="fl bounceInLeft  wow"><img src="images/xian.jpg" alt="" class="xian"></div>
+                    <div class="fr textConBox bounceInRight  wow ">
                         <div class="text">线上+线下，沉浸式教学</div>
                         <div class="textCon">
                             <p>"一体双E"全场景教育生态，让孩子的英语能力，不受时间、空间的约束，随时随地的提升</p>
@@ -69,8 +68,8 @@
             </div>
             <div class="con3">
                 <div class="content clearfix">
-                    <div class="fl bounceInLeft animated wow"><img src="images/xinq.jpg" alt="" class="xinq"></div>
-                    <div class="fr textConBox bounceInRight animated wow">
+                    <div class="fl bounceInLeft  wow"><img src="images/xinq.jpg" alt="" class="xinq"></div>
+                    <div class="fr textConBox bounceInRight  wow">
                         <div class="text">定制化提升，进步看的见</div>
                         <div class="textCon">
                             <p>无论几岁，基础如何，量身定制符合自身需求的学习方案，难以适中，越学越有兴趣</p>
@@ -84,10 +83,10 @@
             <div class="title"><img src="images/t2.jpg" class="t2" alt=""></div>
             <div class="imgTxtBox">
                 <div class="itBox clearfix">
-                    <div class="fl wow bounce animated">
+                    <div class="fl wow bounce ">
                         <img src="images/img1.jpg" alt="">
                     </div>
-                    <div class="fr bgC bgcolor1 wow bounceInUp  animated">
+                    <div class="fr bgC bgcolor1 wow bounceInUp  ">
                         <div class="textTitle">专利电子积木边玩边学</div>
                         <div class="textStuCon">
                             <p>动手动脑，迅速吸收语言知识，充满挑战的游戏，显著提升学习效果，让学生爱上学英语</p>
@@ -96,7 +95,7 @@
                     </div>
                 </div>
                 <div class="itBox clearfix">
-                    <div class="fl  bgC bgcolor2 wow bounceInUp  animated">
+                    <div class="fl  bgC bgcolor2 wow bounceInUp  ">
                         <div class="textTitle">多感官互动快乐课堂</div>
                         <div class="textStuCon">
                             <p>创设丰富的教学情境，让孩子的视、听、味、嗅、触五官得到有效调动、不枯燥，超有趣</p>
@@ -104,15 +103,15 @@
                         </div>
 
                     </div>
-                    <div class="fr wow bounce animated">
+                    <div class="fr wow bounce ">
                         <img src="images/img2.jpg" alt="">
                     </div>
                 </div>
                 <div class="itBox clearfix">
-                    <div class="fl wow bounce animated">
+                    <div class="fl wow bounce ">
                         <img src="images/img3.jpg" alt="">
                     </div>
-                    <div class="fr bgC bgcolor1 wow bounceInUp  animated">
+                    <div class="fr bgC bgcolor1 wow bounceInUp  ">
                         <div class="textTitle">同伴式小组互动学习</div>
                         <div class="textStuCon">
                             <p>易贝乐独特的英语学习法，不在一个人枯燥学习，提高学习乐趣的同时，促进社交能力</p>
@@ -127,24 +126,24 @@
             <div class="title"><img src="images/t3.jpg" class="t3" alt=""></div>
             <div class="stus3Box">
                 <div class="stus3Con1 clearfix">
-                    <div class="fl wow bounceInDown  animated"><img src="images/img4.jpg" alt=""></div>
-                    <div class="fr stus3Con wow bounceInDown  animated" data-wow-delay="0.5s">
+                    <div class="fl wow bounceInDown  "><img src="images/img4.jpg" alt=""></div>
+                    <div class="fr stus3Con wow bounceInDown  " data-wow-delay="0.5s">
                         <div class="til">强大的品牌</div>
                         <p>全国350+门店，11年稳健经营，具有社会责任意识，灭费接受开心豆学员继续学习</p>
                         <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
                     </div>
                 </div>
                 <div class="stus3Con1 clearfix">
-                    <div class="fl wow bounceInDown  animated"><img src="images/img5.jpg" alt=""></div>
-                    <div class="fr stus3Con wow bounceInDown  animated" data-wow-delay="0.5s">
+                    <div class="fl wow bounceInDown  "><img src="images/img5.jpg" alt=""></div>
+                    <div class="fr stus3Con wow bounceInDown  " data-wow-delay="0.5s">
                         <div class="til">稳定的师资</div>
                         <p>持有TESOL专业认证、中外教科学配比，稳定的师资，全程陪伴，更利于孩子学习</p>
                         <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
                     </div>
                 </div>
                 <div class="stus3Con1 clearfix">
-                    <div class="fl wow bounceInDown  animated"><img src="images/img6.jpg" alt=""></div>
-                    <div class="fr stus3Con wow bounceInDown  animated" data-wow-delay="0.5s">
+                    <div class="fl wow bounceInDown  "><img src="images/img6.jpg" alt=""></div>
+                    <div class="fr stus3Con wow bounceInDown  " data-wow-delay="0.5s">
                         <div class="til">完善的体系</div>
                         <p>完善教学跟踪测评体系，让孩子的学习过程得到实时监控和跟踪，让学习效果更有保障</p>
                         <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
@@ -156,7 +155,7 @@
         <div class="chaotwo"></div>
         <div class="xueyuan">
             <div class="title"><img src="images/t4.jpg" class="t4" alt=""></div>
-            <div class="xuexCon wow bounceInRight animated">
+            <div class="xuexCon wow bounceInRight ">
                 <div class="xueBox clearfix">
                     <div class="fl"><img src="images/sp1.jpg" alt=""></div>
                     <div class="fr douCon">
@@ -166,7 +165,7 @@
                     </div>
                 </div>
             </div>
-            <div class="xuexCon wow bounceInLeft animated">
+            <div class="xuexCon wow bounceInLeft ">
                 <div class="xueBox clearfix">
 
                     <div class="fl douCon">
@@ -177,7 +176,7 @@
                     <div class="fr"><img src="images/sp2.jpg" alt=""></div>
                 </div>
             </div>
-            <div class="xuexCon wow bounceInRight animated">
+            <div class="xuexCon wow bounceInRight ">
                 <div class="xueBox clearfix">
                     <div class="fl"><img src="images/sp3.jpg" alt=""></div>
                     <div class="fr douCon">
@@ -191,27 +190,27 @@
 
         <div class="huwai">
             <div class="title"><img src="images/t5.jpg" class="t5" alt=""></div>
-            <div class="conH wow flipInX  animated"><img src="images/ff.jpg" alt=""></div>
+            <div class="conH wow flipInX  "><img src="images/ff.jpg" alt=""></div>
             <div class="mybe">
                 <div class="title">您可能还想了解</div>
                 <div class="iconBox">
-                    <div class="wow bounceInRight animated"  >
+                    <div class="wow bounceInRight "  >
                         <img src="images/icon1.jpg" alt="">
                         <p>课程价格</p>
                     </div>
-                    <div class="wow bounceInRight animated"  data-wow-delay=".1s">
+                    <div class="wow bounceInRight "  data-wow-delay=".1s">
                         <img src="images/icon2.jpg" alt="">
                         <p>附件校区</p>
                     </div>
-                    <div class="wow bounceInRight animated"  data-wow-delay=".2s">
+                    <div class="wow bounceInRight "  data-wow-delay=".2s">
                         <img src="images/icon3.jpg" alt="">
                         <p>促销活动</p>
                     </div>
-                    <div class="wow bounceInRight animated"  data-wow-delay=".3s">
+                    <div class="wow bounceInRight "  data-wow-delay=".3s">
                         <img src="images/icon4.jpg" alt="">
                         <p>教学环境</p>
                     </div>
-                    <div class="wow bounceInRight animated"  data-wow-delay=".4s">
+                    <div class="wow bounceInRight "  data-wow-delay=".4s">
                         <img src="images/icon5.jpg" alt="">
                         <p>班级人数</p>
                     </div>
@@ -221,14 +220,10 @@
         </div>
     </div>
 </body>
+<script src="http://cdn.dowebok.com/131/js/wow.min.js"></script>
 <script>
-var wow = new WOW({
-        boxClass: 'wow',
-        animateClass: 'animated',
-        offset: 0,
-        mobile: true,
-        // live: true
-    });
-    wow.init();
+if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
+	new WOW().init();
+};
 </script>
 </html>
