--- a/index.html
+++ b/index.html
@@ -219,11 +219,12 @@
             </div>
         </div>
     </div>
+    <script src="js/wow.js"></script>
+    <script>
+    if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
+        new WOW().init();
+    };
+    </script>
 </body>
-<script src="http://cdn.dowebok.com/131/js/wow.min.js"></script>
-<script>
-if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
-	new WOW().init();
-};
-</script>
+
 </html>
