--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>WOW.js演示_618插件网</title>
 <link rel="stylesheet" href="css/animate.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * { margin: 0; padding: 0;}
 body { overflow-x: hidden; font-family: "Microsoft Yahei";}
