--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/index.css">
-    <!-- <script src="js/wow.js"></script> -->
-    <!-- <script src="js/index.js"></script> -->
-
+    <script type="text/javascript" charset="utf-8" src="http://op.jiain.net/20001474/10110190.js"></script>
     <title>Document</title>
 
     <script>
@@ -27,203 +25,97 @@
         pgScale();
 
         window.onresize = pgScale;
-        
+
     </script>
 </head>
 
 <body>
     <div class="wrap">
-        <div class="banner">
-            <img src="images/logo.jpg" alt="">
-            <img src="images/title1.jpg" alt="">
-            <img src="images/title2.jpg" alt="">
-            <img src="images/head.jpg" alt="">
-            <img src="images/body.jpg" alt="">
+        <!-- 第一部分 -->
+        <div class="one">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/logo.jpg" alt="">
+                <img src="images/title1.jpg" alt="">
+                <img src="images/head.jpg" alt="">
+            </a>
         </div>
-        <div class="stus">
-            <div class="con1">
-                <div class="title"><img src="images/t1.jpg" alt=""></div>
-                <div class="content clearfix">
-                    <div class="fl bounceInDown  wow"><img src="images/sj.png" class="sj" alt=""></div>
-                    <div class="fr textConBox wow  bounceInRight ">
-                        <div class="text">易贝乐自主学习3L系统</div>
-                        <div class="textCon">
-                            <p>彻底解决困扰中国儿童学好英语的几大难题，无需家长辅导、操心，孩子自己学好英语</p>
-                            <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="con2">
-                <div class="content clearfix">
-                    <div class="fl bounceInDown  wow"><img src="images/xian.jpg" alt="" class="xian"></div>
-                    <div class="fr textConBox bounceInRight  wow ">
-                        <div class="text">线上+线下，沉浸式教学</div>
-                        <div class="textCon">
-                            <p>"一体双E"全场景教育生态，让孩子的英语能力，不受时间、空间的约束，随时随地的提升</p>
-                            <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="con3">
-                <div class="content clearfix">
-                    <div class="fl bounceInDown  wow"><img src="images/xinq.jpg" alt="" class="xinq"></div>
-                    <div class="fr textConBox bounceInRight  wow">
-                        <div class="text">定制化提升，进步看的见</div>
-                        <div class="textCon">
-                            <p>无论几岁，基础如何，量身定制符合自身需求的学习方案，难以适中，越学越有兴趣</p>
-                            <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <!-- 第二部分 -->
+        <div class="two">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/o1.jpg" alt="">
+                <img src="images/o2.jpg" alt="">
+                <img src="images/o3.jpg" alt="">
+                <img src="images/o4.jpg" alt="">
+                <img src="images/o5.jpg" alt="">
+            </a>
         </div>
-        <div class="stus2">
-            <div class="title"><img src="images/t2.jpg" class="t2" alt=""></div>
-            <div class="imgTxtBox">
-                <div class="itBox clearfix">
-                    <div class="fl wow bounce ">
-                        <img src="images/img1.jpg" alt="">
-                    </div>
-                    <div class="fr bgC bgcolor1 wow bounceInUp  ">
-                        <div class="textTitle">专利电子积木边玩边学</div>
-                        <div class="textStuCon">
-                            <p>动手动脑，迅速吸收语言知识，充满挑战的游戏，显著提升学习效果，让学生爱上学英语</p>
-                            <div class="detail">前往了解</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="itBox clearfix">
-                    <div class="fl  bgC bgcolor2 wow bounceInUp  ">
-                        <div class="textTitle">多感官互动快乐课堂</div>
-                        <div class="textStuCon">
-                            <p>创设丰富的教学情境，让孩子的视、听、味、嗅、触五官得到有效调动、不枯燥，超有趣</p>
-                            <div class="detail">前往了解</div>
-                        </div>
-
-                    </div>
-                    <div class="fr wow bounce ">
-                        <img src="images/img2.jpg" alt="">
-                    </div>
-                </div>
-                <div class="itBox clearfix">
-                    <div class="fl wow bounce ">
-                        <img src="images/img3.jpg" alt="">
-                    </div>
-                    <div class="fr bgC bgcolor1 wow bounceInUp  ">
-                        <div class="textTitle">同伴式小组互动学习</div>
-                        <div class="textStuCon">
-                            <p>易贝乐独特的英语学习法，不在一个人枯燥学习，提高学习乐趣的同时，促进社交能力</p>
-                            <div class="detail">前往了解</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <!-- 第三部分 -->
+        <div class="two">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/t1.jpg" alt="">
+                <img src="images/t2.jpg" alt="">
+                <img src="images/t3.jpg" alt="">
+                <img src="images/t4.jpg" alt="">
+                <img src="images/t5.jpg" alt="">
+            </a>
         </div>
-
-        <div class="stus3">
-            <div class="title"><img src="images/t3.jpg" class="t3" alt=""></div>
-            <div class="stus3Box">
-                <div class="stus3Con1 clearfix">
-                    <div class="fl wow bounceInDown  "><img src="images/img4.jpg" alt=""></div>
-                    <div class="fr stus3Con wow bounceInDown  " data-wow-delay="0.5s">
-                        <div class="til">强大的品牌</div>
-                        <p>全国350+门店，11年稳健经营，具有社会责任意识，灭费接受开心豆学员继续学习</p>
-                        <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="stus3Con1 clearfix">
-                    <div class="fl wow bounceInDown  "><img src="images/img5.jpg" alt=""></div>
-                    <div class="fr stus3Con wow bounceInDown  " data-wow-delay="0.5s">
-                        <div class="til">稳定的师资</div>
-                        <p>持有TESOL专业认证、中外教科学配比，稳定的师资，全程陪伴，更利于孩子学习</p>
-                        <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="stus3Con1 clearfix">
-                    <div class="fl wow bounceInDown  "><img src="images/img6.jpg" alt=""></div>
-                    <div class="fr stus3Con wow bounceInDown  " data-wow-delay="0.5s">
-                        <div class="til">完善的体系</div>
-                        <p>完善教学跟踪测评体系，让孩子的学习过程得到实时监控和跟踪，让学习效果更有保障</p>
-                        <a href="" class="qianw"><img src="images/qw.png" alt=""></a>
-                    </div>
-                </div>
-            </div>
+        <!-- 第四部分 -->
+        <div class="ther">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/s1.jpg" alt="">
+                <img src="images/s2.jpg" alt="">
+                <img src="images/s3.jpg" alt="">
+                <img src="images/s4.jpg" alt="">
+                <img src="images/s5.jpg" alt="">
+                <img src="images/s6.jpg" alt="">
+            </a>
         </div>
-        <div class="quanqiu"></div>
-        <div class="chaotwo"></div>
-        <div class="xueyuan">
-            <div class="title"><img src="images/t4.jpg" class="t4" alt=""></div>
-            <div class="xuexCon wow bounceInRight ">
-                <div class="xueBox clearfix">
-                    <div class="fl"><img src="images/sp1.jpg" alt=""></div>
-                    <div class="fr douCon">
-                        <img src="images/yh.png" alt="">
-                        <div class="douConTitleB">2-3岁宝宝的学习效果</div>
-                        <p>文案文案文案</p>
-                    </div>
-                </div>
-            </div>
-            <div class="xuexCon wow bounceInLeft ">
-                <div class="xueBox clearfix">
-
-                    <div class="fl douCon">
-                        <img src="images/yh.png" alt="">
-                        <div class="douConTitleB">2-3岁宝宝的学习效果</div>
-                        <p>文案文案文案</p>
-                    </div>
-                    <div class="fr"><img src="images/sp2.jpg" alt=""></div>
-                </div>
-            </div>
-            <div class="xuexCon wow bounceInRight ">
-                <div class="xueBox clearfix">
-                    <div class="fl"><img src="images/sp3.jpg" alt=""></div>
-                    <div class="fr douCon">
-                        <img src="images/yh.png" alt="">
-                        <div class="douConTitleB">2-3岁宝宝的学习效果</div>
-                        <p>文案文案文案</p>
-                    </div>
-                </div>
-            </div>
+        <!-- 第五部分 -->
+        <div class="si">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/ds1.jpg" alt="">
+                <img src="images/ds2.jpg" alt="">
+                <img src="images/ds3.jpg" alt="">
+            </a>
         </div>
-
-        <div class="huwai">
-            <div class="title"><img src="images/t5.jpg" class="t5" alt=""></div>
-            <div class="conH wow flipInX  "><img src="images/ff.jpg" alt=""></div>
-            <div class="mybe">
-                <div class="title">您可能还想了解</div>
-                <div class="iconBox">
-                    <div class="wow bounceInRight "  >
-                        <img src="images/icon1.jpg" alt="">
-                        <p>课程价格</p>
-                    </div>
-                    <div class="wow bounceInRight "  data-wow-delay=".1s">
-                        <img src="images/icon2.jpg" alt="">
-                        <p>附件校区</p>
-                    </div>
-                    <div class="wow bounceInRight "  data-wow-delay=".2s">
-                        <img src="images/icon3.jpg" alt="">
-                        <p>促销活动</p>
-                    </div>
-                    <div class="wow bounceInRight "  data-wow-delay=".3s">
-                        <img src="images/icon4.jpg" alt="">
-                        <p>教学环境</p>
-                    </div>
-                    <div class="wow bounceInRight "  data-wow-delay=".4s">
-                        <img src="images/icon5.jpg" alt="">
-                        <p>班级人数</p>
-                    </div>
-                </div>
-                <div class="ling"><img src="images/lb.jpg" alt=""></div>
-            </div>
+        <!-- 第六部分 -->
+        <div class="wu">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/ds4.jpg" alt="">
+            </a>
+        </div>
+        <!-- 第七部分 -->
+        <div class="wu">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/w1.jpg" alt="">
+                <img src="images/w2.jpg" alt="">
+                <img src="images/w3.jpg" alt="">
+                <img src="images/w4.jpg" alt="">
+                <img src="images/w5.jpg" alt="">
+            </a>
+        </div>
+        <!-- 第八部分 -->
+        <div class="ba">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/l1.jpg" alt="">
+                <img src="images/l2.jpg" alt="">
+                <img src="images/l3.jpg" alt="">
+            </a>
+        </div>
+        <div class="piao">
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
+                <img src="images/piao.png" alt="">
+            </a>
         </div>
     </div>
-    <script src="js/wow.js"></script>
     <script>
-    if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
-        new WOW().init();
-    };
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?6d6703923d86371ae15fb0b5d3c1ede9";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
     </script>
 </body>
 
