--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             </a>
         </div>
         <div class="piao">
-            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/piao.png" alt="">
-            </a>
+            <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543" class="leftTall"></a>
+                <input type="text" class="tell" placeholder="请输入电话号码">
+        
         </div>
     </div>
     <script>
