--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/jquery.js"> </script>
     <script type="text/javascript" charset="utf-8" src="http://op.jiain.net/20001474/10110190.js"></script>
     <title>Document</title>
 
@@ -34,72 +35,102 @@
         <!-- 第一部分 -->
         <div class="one">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/logo.jpg" alt="">
-                <img src="images/title1.jpg" alt="">
-                <img src="images/head.jpg" alt="">
+                <img srcs="images/logo.jpg" src=
+                '' alt="">
+                <img srcs="images/title1.jpg" src=
+                '' alt="">
+                <img srcs="images/head.jpg" src=
+                '' alt="">
             </a>
         </div>
         <!-- 第二部分 -->
         <div class="two">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/o1.jpg" alt="">
-                <img src="images/o2.jpg" alt="">
-                <img src="images/o3.jpg" alt="">
-                <img src="images/o4.jpg" alt="">
-                <img src="images/o5.jpg" alt="">
+                <img srcs="images/o1.jpg" src=
+                '' alt="">
+                <img srcs="images/o2.jpg" src=
+                '' alt="">
+                <img srcs="images/o3.jpg" src=
+                '' alt="">
+                <img srcs="images/o4.jpg" src=
+                '' alt="">
+                <img srcs="images/o5.jpg" src=
+                '' alt="">
             </a>
         </div>
         <!-- 第三部分 -->
         <div class="two">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/t1.jpg" alt="">
-                <img src="images/t2.jpg" alt="">
-                <img src="images/t3.jpg" alt="">
-                <img src="images/t4.jpg" alt="">
-                <img src="images/t5.jpg" alt="">
+                <img srcs="images/t1.jpg" src=
+                '' alt="">
+                <img srcs="images/t2.jpg" src=
+                '' alt="">
+                <img srcs="images/t3.jpg" src=
+                '' alt="">
+                <img srcs="images/t4.jpg" src=
+                '' alt="">
+                <img srcs="images/t5.jpg" src=
+                '' alt="">
             </a>
         </div>
         <!-- 第四部分 -->
         <div class="ther">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/s1.jpg" alt="">
-                <img src="images/s2.jpg" alt="">
-                <img src="images/s3.jpg" alt="">
-                <img src="images/s4.jpg" alt="">
-                <img src="images/s5.jpg" alt="">
-                <img src="images/s6.jpg" alt="">
+                <img srcs="images/s1.jpg" src=
+                '' alt="">
+                <img srcs="images/s2.jpg" src=
+                '' alt="">
+            
+                <img srcs="images/s4.jpg" src=
+                '' alt="">
+                <img srcs="images/s5.jpg" src=
+                '' alt="">
+                <img srcs="images/s6.jpg" src=
+                '' alt="">
             </a>
         </div>
         <!-- 第五部分 -->
         <div class="si">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/ds1.jpg" alt="">
-                <img src="images/ds2.jpg" alt="">
-                <img src="images/ds3.jpg" alt="">
+                <img srcs="images/ds1.jpg" src=
+                '' alt="">
+                <img srcs="images/ds2.jpg" src=
+                '' alt="">
+                <img srcs="images/ds3.jpg" src=
+                '' alt="">
             </a>
         </div>
         <!-- 第六部分 -->
         <div class="wu">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/ds4.jpg" alt="">
+                <img srcs="images/ds4.jpg" src=
+                '' alt="">
             </a>
         </div>
         <!-- 第七部分 -->
         <div class="wu">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/w1.jpg" alt="">
-                <img src="images/w2.jpg" alt="">
-                <img src="images/w3.jpg" alt="">
-                <img src="images/w4.jpg" alt="">
-                <img src="images/w5.jpg" alt="">
+                <img srcs="images/w1.jpg" src=
+                '' alt="">
+                <img srcs="images/w2.jpg" src=
+                '' alt="">
+                <img srcs="images/w3.jpg" src=
+                '' alt="">
+                <img srcs="images/w4.jpg" src=
+                '' alt="">
+                <img srcs="images/w5.jpg" src=
+                '' alt="">
             </a>
         </div>
         <!-- 第八部分 -->
         <div class="ba">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
-                <img src="images/l1.jpg" alt="">
-                <img src="images/l2.jpg" alt="">
-                <img src="images/l3.jpg" alt="">
+                <img srcs="images/l1.jpg" src=
+                '' alt="">
+                <img srcs="images/l2.jpg" src=
+                '' alt="">
+                <img srcs="images/l3.jpg" src=
+                '' alt="">
             </a>
         </div>
         <div class="piao">
@@ -116,6 +147,19 @@
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
+        $(window).scroll(function(){
+            scro()
+        })
+        function scro(){
+            $("img").each(function(a,b){
+                console.log($(window).height())
+            if($(this).offset().top<($(window).height()+$(window).scrollTop())){
+            console.log($(this))
+                $(this).attr('src',$(this).attr('srcs'))
+            }
+        })
+        }
+        scro()
     </script>
 </body>
 
