--- a/index.html
+++ b/index.html
@@ -36,101 +36,101 @@
         <div class="one">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/logo.jpg" src=
-                '' alt="">
+                '' alt="" height="1.25rem">
                 <img srcs="images/title1.jpg" src=
-                '' alt="">
+                '' alt="" height="2.11rem">
                 <img srcs="images/head.jpg" src=
-                '' alt="">
+                '' alt="" height="3.36rem">
             </a>
         </div>
         <!-- 第二部分 -->
         <div class="two">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/o1.jpg" src=
-                '' alt="">
+                '' alt="" height="1.54rem">
                 <img srcs="images/o2.jpg" src=
-                '' alt="">
+                '' alt="" height="3.75rem">
                 <img srcs="images/o3.jpg" src=
-                '' alt="">
+                '' alt="" height="3.59rem">
                 <img srcs="images/o4.jpg" src=
-                '' alt="">
+                '' alt="" height="3.90rem">
                 <img srcs="images/o5.jpg" src=
-                '' alt="">
+                '' alt="" height="1.38rem">
             </a>
         </div>
         <!-- 第三部分 -->
         <div class="two">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/t1.jpg" src=
-                '' alt="">
+                '' alt="" height="1.95rem">
                 <img srcs="images/t2.jpg" src=
-                '' alt="">
+                '' alt="" height="4.14rem">
                 <img srcs="images/t3.jpg" src=
-                '' alt="">
+                '' alt="" height="4.16rem">
                 <img srcs="images/t4.jpg" src=
-                '' alt="">
+                '' alt="" height="3.74rem">
                 <img srcs="images/t5.jpg" src=
-                '' alt="">
+                '' alt="" height="1.48rem">
             </a>
         </div>
         <!-- 第四部分 -->
         <div class="ther">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/s1.jpg" src=
-                '' alt="">
+                '' alt="" height="1.84rem">
                 <img srcs="images/s2.jpg" src=
-                '' alt="">
+                '' alt="" height="3.63rem">
             
                 <img srcs="images/s4.jpg" src=
-                '' alt="">
+                '' alt="" height="3.65rem">
                 <img srcs="images/s5.jpg" src=
-                '' alt="">
+                '' alt="" height="3.81rem">
                 <img srcs="images/s6.jpg" src=
-                '' alt="">
+                '' alt="" height="4.20rem">
             </a>
         </div>
         <!-- 第五部分 -->
         <div class="si">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/ds1.jpg" src=
-                '' alt="">
+                '' alt="" height="2.16rem">
                 <img srcs="images/ds2.jpg" src=
-                '' alt="">
+                '' alt="" height="1.31rem">
                 <img srcs="images/ds3.jpg" src=
-                '' alt="">
+                '' alt="" height="5.43rem">
             </a>
         </div>
         <!-- 第六部分 -->
         <div class="wu">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/ds4.jpg" src=
-                '' alt="">
+                '' alt="" height="1.52rem">
             </a>
         </div>
         <!-- 第七部分 -->
         <div class="wu">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/w1.jpg" src=
-                '' alt="">
+                '' alt="" height="2.00rem">
                 <img srcs="images/w2.jpg" src=
-                '' alt="">
+                '' alt="" height="2.55rem">
                 <img srcs="images/w3.jpg" src=
-                '' alt="">
+                '' alt="" height="2.60rem">
                 <img srcs="images/w4.jpg" src=
-                '' alt="">
+                '' alt="" height="2.03rem">
                 <img srcs="images/w5.jpg" src=
-                '' alt="">
+                '' alt="" height="1.38rem">
             </a>
         </div>
         <!-- 第八部分 -->
         <div class="ba">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <img srcs="images/l1.jpg" src=
-                '' alt="">
+                '' alt="" height="1.89rem">
                 <img srcs="images/l2.jpg" src=
-                '' alt="">
+                '' alt="" height="3.14rem">
                 <img srcs="images/l3.jpg" src=
-                '' alt="">
+                '' alt="" height="3.62rem">
             </a>
         </div>
         <div class="piao">
@@ -153,7 +153,7 @@
         function scro(){
             $("img").each(function(a,b){
                 console.log($(window).height())
-            if($(this).offset().top<($(window).height()+$(window).scrollTop())){
+            if($(this).offset().top+10<($(window).height()+$(window).scrollTop())){
             console.log($(this))
                 $(this).attr('src',$(this).attr('srcs'))
             }
