--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         <div class="one">
             <a href="http://chat.talk99.cn/chat/chat/p.do?c=20001474&f=10110190&g=10084543">
                 <div>
-                    <img srcs="images/p11-01.jpg" src=
+                    <img srcs="images/p11_01.jpg" src=
                     '' alt="" height="1.25rem">
                 </div>
-                <div> <img srcs="images/p11-02.jpg" src=
+                <div> <img srcs="images/p11_02.jpg" src=
                     '' alt="" height="2.11rem"></div>
-               <div><img srcs="images/p11-03.jpg" src=
+               <div><img srcs="images/p11_03.jpg" src=
                 '' alt="" height="3.36rem"></div>
-               <div><img srcs="images/p11-04.jpg" src=
+               <div><img srcs="images/p11_04.jpg" src=
                 '' alt="" height="3.36rem"></div>
-               <div><img srcs="images/p11-05.jpg" src=
+               <div><img srcs="images/p11_05.jpg" src=
                 '' alt="" height="3.36rem"></div>
                 
             </a>
