--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 console.log($(window).height())
             if($(this).offset().top-10<($(window).height()+$(window).scrollTop())){
             console.log($(this))
-                $(this).attr('src',$(this).attr('src'))
+                $(this).attr('src',$(this).attr('srcs'))
             }
         })
         }
